kubernetes/app/1-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-app
  labels:
    # Enforce Pod Security Standards (Restricted profile)
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
